# pulseaudio-module-xrdp

./: .gitignore  .travis.centos.sh  .travis.ubuntu.sh  .travis.yml  Makefile.am  README.md  configure.ac  module-xrdp-sink.c  module-xrdp-source.c
.github/workflows/: build.yml
instfiles/: Makefile.am  load_pa_modules.sh  pulseaudio-xrdp.desktop.in
scripts/: install_pulseaudio_sources.sh  install_pulseaudio_sources_apt.sh  install_pulseaudio_sources_apt_wrapper.sh  install_pulseaudio_sources_wrapper.sh
src/: Makefile.am  module-xrdp-sink.c  module-xrdp-source.c
